# Thesis-Benchmarks

./: .gitignore  README.md
BFS/: CMakeLists.txt  README.md  build.sh  clean.sh  profile.md  run.sh
BFS/Graphs/: graph-gen.py
BFS/data/: graph-gen.py
BFS/include/: knobs.h
BFS/libs/HMLSS_BFS/: CMakeLists.txt
BFS/libs/HMLSS_BFS/include/HMLSS_BFS/: BFS.h  BFSFactory.h  BFSKnobs.h  BFSUtils.h  BFS_CUDA.h  BFS_OMP.h
BFS/libs/HMLSS_BFS/src/: BFS.cc  BFSFactory.cc  BFSKnobs.cc  BFSUtils.cc  BFS_CUDA.cu  BFS_OMP.cc
BFS/libs/HMLSS_Bfs/: CMakeLists.txt
BFS/libs/HMLSS_Bfs/include/HMLSS_Bfs/: Bfs.h  BfsCpu.h  BfsCuda.h  BfsKnobs.h  BfsUtils.h
BFS/libs/HMLSS_Bfs/src/: Bfs.cc  BfsCpu.cc  BfsCuda.cu  BfsKnobs.cc  BfsUtils.cc
BFS/libs/HMLSS_Graph/: CMakeLists.txt
BFS/libs/HMLSS_Graph/include/HMLSS_Graph/: Graph.h  GraphUtils.h
BFS/libs/HMLSS_Graph/src/: Graph.cc  GraphUtils.cc
BFS/libs/utils/: CMakeLists.txt
BFS/libs/utils/include/utils/: enum.h
BFS/margot/: CSVtoOPS.py  margot_benchmark.json  margot_profiling.json
BFS/src/: benchmark.cc  bfs.cc  knobs.cc  main.cc  profiling.cc
CUTCP/: CMakeLists.txt  CUTPC.md  build.sh  run.sh
CUTCP/libs/Atom/: CMakeLists.txt
CUTCP/libs/Atom/include/Atom/: Atom.h  Lattice.h  Utils.h
CUTCP/libs/Atom/src/: Lattice.cc  Utils.cc
CUTCP/libs/Cutcp/: CMakeLists.txt
CUTCP/libs/Cutcp/include/Cutcp/: Cutcp.h  CutcpCpu.h  Utils.h
CUTCP/libs/Cutcp/src/: Cutcp.cc  CutcpCpu.cc  Utils.cc
CUTCP/libs/Debug/: CMakeLists.txt
CUTCP/libs/Debug/include/Debug/: Debug.h
CUTCP/libs/Debug/src/: Debug.cc
CUTCP/libs/Utils/: CMakeLists.txt
CUTCP/src/: cutcp.cc
